Add GitHub explanation page + add accessibility
Since GitHub is an external service that we require developers to use, an
explanation of why and how to fork the repositories is needed. In the process
I also added LABEL elements and updated the local version of the CSS reset
code (as otherwise focus borders don't appear).

--- a/www/stc/dreamhack.css
+++ b/www/stc/dreamhack.css
@@ -124,3 +124,10 @@ span.dwuser img {
 #menu ul li a:hover {
   background-image: url("/img/tropo-red/icon_menu_swirl_dropdown.png");
 }
+
+img.explanatory-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid grey;
+}
