--- a/www/stc/tropo/reset.css
+++ b/www/stc/tropo/reset.css
@@ -1,58 +1,90 @@
-/**
- * Erik Meyer's CSS Reset Reloaded
- *
- * @link            http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/
- * @version            1.0
- * @revision        $Revision$
- * @lastmodified    $Date$
- */
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-    margin:          0;
-    padding:         0;
-    border:          0;
-    outline:         0;
-    font-size:       100%;
-    vertical-align:  baseline;
-    background:      transparent;
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 body {
-    line-height:     1;
+	line-height: 1;
 }
 ol, ul {
-    list-style:      none;
+	list-style: none;
 }
 blockquote, q {
-    quotes:          none;
+	quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-    content:         '';
-    content:         none;
+	content: '';
+	content: none;
 }
-ins {
-    text-decoration: none;
-}
-del {
-    text-decoration: line-through;
-}
-/* @note    tables still need 'cellspacing="0"' in the markup */
 table {
-    border-collapse: collapse;
-    border-spacing:  0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
-/* @note    remove default border of linked images */
-a img, :link img, :visited img {
-    border: none;
+
+/* tweak the reset settings */
+th {
+    padding: 0.2em 0.8em;
 }
-/* @note    turn on bicubic sampling for image resizing in IE */
-img {
-    -ms-interpolation-mode: bicubic;
+td {
+    padding: 0.2em 0.5em;
+}
+
+tbody th {
+    text-align: left;
+}
+
+/* CSS-style some things that users like to use */
+q {
+    margin-left: 1em;
+    font-style: italic;
+}
+blockquote {
+    margin-left: 1em;
+    padding: 1em 0.5em;
+}
+small { font-size: smaller; }
+big { font-size: larger; }
+sub { vertical-align: sub; }
+sup { vertical-align: super; }
+
+h3 { font-size: 1.4em; }
+h4 { font-size: 1.25em; }
+h5 { font-size: 1.1em; }
+h6 { font-size: 1em; }
+
+ol {
+    list-style-type: decimal;
+    margin-left: 1em;
+}
+ul {
+    list-style-type: disc;
+    margin-left: 1em;
+}
+dd {
+    margin-left: 1em;
 }
